JAR actualizado con CORS Vercel